# mini-PGW

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
res/: clientConfig.json  clientConfigQuiet.json  serverConfig.json
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/common/: CDREvent.cpp  CDREvent.h  CMakeLists.txt  imsi.cpp  imsi.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  session.cpp  session.h  threadPool.cpp  threadPool.h
test/: CMakeLists.txt  tests.cpp
test/res/: testClientConfig.json  testServerConfig.json
